--- a/hw13-dependency-injection/src/main/resources/WEB-INF/templates/login.html
+++ b/hw13-dependency-injection/src/main/resources/WEB-INF/templates/login.html
@@ -1,7 +1,7 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" th:href="@{/css/styles.css}" type="text/css"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" id="bootstrap-css" rel="stylesheet">
-    <link href="/styles.css" id="local-css" rel="stylesheet">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
@@ -15,10 +15,10 @@
 <div class="main">
     <div class="col-md-6 col-sm-12">
         <div class="login-form">
-            <form action="/login" method="post">
+            <form method="post" th:action="@{/login}">
                 <div class="form-group">
                     <label>User Name</label>
-                    <input class="form-control" name="login" placeholder="User Name" type="text">
+                    <input class="form-control" name="username" placeholder="User Name" type="text">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
