--- a/hw13-dependency-injection/src/main/resources/WEB-INF/templates/usersList.html
+++ b/hw13-dependency-injection/src/main/resources/WEB-INF/templates/usersList.html
@@ -5,7 +5,7 @@
     <title>UsersList</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" id="bootstrap-css" rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css"/>
+    <link rel="stylesheet" th:href="@{/css/styles.css}" type="text/css"/>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script th:src="@{/js/createUser.js}"></script>
